# Reddit_clone

./: .gitignore  LICENSE
backend/: main.py  piccolo_conf.py  pyproject.toml  settings.py
backend/accounts/: controllers.py  middleware.py  piccolo_app.py  profile_controllers.py  schema.py  tables.py
backend/accounts/piccolo_migrations/: accounts_2026_02_09t08_39_48_894000.py  accounts_2026_02_23t15_08_21_171344.py  accounts_2026_04_24t17_30_00_000000.py
backend/comments/: controllers.py  piccolo_app.py  schema.py  tables.py
backend/comments/piccolo_migrations/: comments_2026_03_20t09_00_46_312019.py  comments_2026_03_21t14_59_21_435176.py  comments_2026_03_21t15_16_38_509913.py  comments_2026_03_21t15_33_58_187942.py  comments_2026_03_21t15_37_24_956436.py
backend/community/: controllers.py  piccolo_app.py  schema.py  tables.py
backend/community/piccolo_migrations/: community_2026_02_22t13_48_00_238474.py  community_2026_02_23t15_33_44_247972.py  community_2026_02_23t15_57_57_717510.py  community_2026_03_14t13_16_39_707299.py  community_2026_03_14t16_35_16_440604.py  community_2026_03_14t16_36_40_623993.py
backend/core/: controllers.py
backend/posts/: controllers.py  piccolo_app.py  schema.py  tables.py
backend/posts/piccolo_migrations/: posts_2026_03_18t21_10_39_853501.py  posts_2026_03_21t14_57_13_884853.py  posts_2026_03_21t15_13_14_421839.py  posts_2026_03_21t15_33_42_601409.py  posts_2026_03_21t15_35_07_295198.py  (+2 more)
backend/utils/: email_sender.py  google_oauth.py  pwd_hash.py  refresh.py  s3.py  secret.py  slugify.py  tokens.py
(+115 files in other folders)
